src/objects/Issue__c.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detected In Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Issue</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>